--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,7 @@
 /*overwrite default*/
+.col {
+    padding: 0px;
+}
 
 .bar.bar-stable {
     background-color: rgb(254, 87, 34);
@@ -45,6 +48,7 @@
 }
 
 .item {
+    font-size: 12px;
     border-color: #eee;
 }
 
@@ -77,7 +81,7 @@
 }
 
 .popup-container .popup {
-    width: 250px;
+    width: 300px;
     text-align: center;
     background-color: rgb(255, 255, 255);
 }
@@ -94,6 +98,9 @@
     border-top-width: 2px;
 }
 
+.item-note {
+    font-size: 12px;
+}
 
 /*end overwrite default*/
 
@@ -121,6 +128,11 @@
 
 .pp-no-padding {
     padding: 0px;
+}
+
+.pp-no-top-bottom-padding {
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .pp-big-padding {
