--- a/www/templates/modalReplyMeet.html
+++ b/www/templates/modalReplyMeet.html
@@ -12,7 +12,7 @@
         </div>
         <ion-list class="pp-black">
             <div class="list card pp-card">
-                <a class="item item-icon-left" href="#" ng-click="chooseOptionSex(targetSpecialInfo.data, targetSpecialInfo.data.sex)">
+                <a class="item item-icon-left" href="#" ng-click="chooseOptionSex(targetSpecialInfo.data, targetSpecialInfo.data.sex, true)">
                     <i class="icon ion-transgender"></i> 对方性别
                     <span class="item-note">{{targetSpecialInfo.data.sex}}</span>
                 </a>
