--- a/www/templates/activityChat.html
+++ b/www/templates/activityChat.html
@@ -2,6 +2,10 @@
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button ng-click="myBack()">
         </ion-nav-back-button>
+        <ion-nav-buttons side="secondary">
+            <button class="button button-light button-clear icon ion-ios-people" ng-click="editLike()">
+            </button>
+        </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content class="content-stable">
         <div class="messages" ng-repeat="item in groupChatMessagesRQ.result | orderBy: 'createdTime'" ng-class="{other: item.fromUserId != usersRQ.result[0]._id}">
