--- a/www/templates/tab-activity.html
+++ b/www/templates/tab-activity.html
@@ -21,7 +21,7 @@
                     <div class="row">
                         <h3 class="pp-white-font col col-90">{{item.title}}</h3>
                         <div class="col col-10">
-                            <span class="badge badge-assertive pp-badge-height" ng-hide="unreadCount(unreadGroupChatMessageCountsRQ.result, item._id) == 0">{{unreadCount(unreadGroupChatMessageCountsRQ.result, item._id)}}</span>
+                            <span class="badge badge-assertive pp-badge-height" ng-hide="unreadGroupChatCount(item._id) == 0">{{unreadGroupChatCount(item._id)}}</span>
                         </div>
                     </div>
                     <div class="row pp-space-big">
@@ -38,7 +38,7 @@
                             </span>
                         <div class="col col-10">
                             <a ng-if="curFilter == '活动广场'" class="button button-small button-balanced" ng-click="joinActivity(item)">Go</a>
-                            <a ng-if="curFilter == '已关注活动'" class="button button-small button-balanced" ng-click="enterActivity(item)">In</a>
+                            <a ng-if="curFilter == '已关注活动'" class="button button-small button-balanced" ng-click="enterActivity(item._id)">In</a>
                         </div>
                     </div>
                 </div>
