add activity pic

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,7 @@
             <ion-nav-view name="tab-meet"></ion-nav-view>
         </ion-tab>
          <!-- meet Activity -->
-        <ion-tab title="活动" icon="ion-ios-pulse-strong" href="#/tab/activity" badge="unreadGroupChatTotalCount()" badge-style="badge-assertive">
+        <ion-tab title="活动" icon="ion-ios-people" href="#/tab/activity" badge="unreadGroupChatTotalCount()" badge-style="badge-assertive">
             <ion-nav-view name="tab-activity"></ion-nav-view>
         </ion-tab>
         <!-- friend Tab -->
