--- a/www/css/style.css
+++ b/www/css/style.css
@@ -108,6 +108,17 @@
 
 
 /* Empty. Add your own CSS if you like */
+.pp-mark-img{
+  width: 50px;
+  height: 50px;
+}
+
+.pp-mark-text{
+  color: red;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
 
 .pp-click-history {
     text-align: center;
@@ -122,10 +133,11 @@
 }
 
 .pp-mark {
+  position: relative;
     width: 50px;
     height: 50px;
     display: inline-block;
-    background-color: red;
+    //background-color: red;
     margin: 1px;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.16), 0 4px 20px 0 rgba(0, 0, 0, 0.12);
 }
