--- a/www/templates/tab-setting.html
+++ b/www/templates/tab-setting.html
@@ -1,18 +1,20 @@
 <ion-view view-title="{{usersRQ.result[0].profile.nickname}}">
-    <ion-content padding="true" class="has-header">
-        <button class="button button-positive button-block" ng-click="logout()">注销</button>
-        <button class="button button-positive button-block" ng-click="test()">test</button>
-        <h2>在线:{{online}}<h2>
-        <div class="list list-inset">
-            <label class="item item-input">
-                <input type="text" placeholder="好友用户名" ng-model="friend.username">
-            </label>
-        </div>
-        <button class="button button-positive button-block pp-shadow" ng-disabled="!(friend.username)" ng-click="addFriend()">加好友</button>
-        <ion-list>
-            <div class="list card" ng-repeat="item in usersRQ.result[0].profile.blackList">
-                {{item}}
-            </div>
-        </ion-list>
-    </ion-content>
+  <ion-content padding="true" class="has-header">
+    <button class="button button-positive button-block" ng-click="logout()">注销</button>
+    <button class="button button-positive button-block" ng-click="test()">test</button>
+    <h2>在线:{{online}}
+    </h2>
+    <ion-toggle ng-model="ppDebug.data" toggle-class="toggle-balanced">Debug Mode</ion-toggle>
+    <div class="list list-inset">
+      <label class="item item-input">
+        <input type="text" placeholder="好友用户名" ng-model="friend.username">
+      </label>
+    </div>
+    <button class="button button-positive button-block pp-shadow" ng-disabled="!(friend.username)" ng-click="addFriend()">加好友</button>
+    <ion-list>
+      <div class="list card" ng-repeat="item in usersRQ.result[0].profile.blackList">
+        {{item}}
+      </div>
+    </ion-list>
+  </ion-content>
 </ion-view>
